[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/font_display.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/font_display2.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/scenes/title.gd" type="Script" id=3]

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
lobby_scene = "res://scenes/lobby.tscn"

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.313726, 0.313726, 0.313726, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -442.0
margin_top = 77.0
margin_right = 442.0
margin_bottom = 222.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave amp=20]Consummate Carrion[/wave]"
meta_underlined = false
text = "Consummate Carrion"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelName" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -101.0
margin_right = 208.0
margin_bottom = -19.0
custom_fonts/font = ExtResource( 2 )
text = "What's your name?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditName" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -25.0
margin_right = 190.0
margin_bottom = 25.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHost" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = 88.0
margin_right = -192.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 2 )
text = "Host Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonJoin" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 192.0
margin_top = 88.0
margin_right = 512.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 2 )
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditHostPort" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = 176.0
margin_right = -192.0
margin_bottom = 212.0
align = 1
placeholder_text = "Port"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditJoinIp" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 192.0
margin_top = 176.0
margin_right = 512.0
margin_bottom = 212.0
align = 1
placeholder_text = "IP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditJoinPort" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 192.0
margin_top = 216.0
margin_right = 512.0
margin_bottom = 252.0
align = 1
placeholder_text = "Port"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonExit" type="Button" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 104.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 2 )
text = "<-"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="ButtonHost" to="." method="_on_ButtonHost_button_down"]
[connection signal="button_down" from="ButtonJoin" to="." method="_on_ButtonJoin_button_down"]
[connection signal="button_down" from="ButtonExit" to="." method="_on_ButtonExit_button_down"]
